--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-md">
           <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/logo.png">
+                <!-- <img src="assets/img/logo.png"> -->
             </a>
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
