--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-banner-content">
-                        <h1>Innovative Solutions.<br> Obsession on Quality. <span>On Bleeding Edge.</span></h1>
+                        <h1>Learn smart, assess better! AI to your help.<span>Launching soon.</span></h1>
                         <p>"Pursuit on engineering excellence, driven by passion, heavy focus on user experience"</p>
                         <a href="javascript:;" class="hidden">Learn More</a>
                     </div>
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class="row part2">
+            <div class="row part2 hidden">
                 <div class="col-md-6">
                     <div class="about-img">
                         <img src="assets/img/about-img-min.jpg" alt="">
@@ -93,7 +93,7 @@
     <!-- banner section ends -->
 
     <!-- contact section starts -->
-    <section class="contact-section" id="contact-us">
+    <section class="contact-section hidden" id="contact-us">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="footer-content center-text">
-                        <p>Copyright &copy; 2022 sandymist.com</p>
+                        <p>&copy; 2024 sandymist.com</p>
                     </div>
                 </div>
 <!--
