--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class=" " id="navbarCollapse" style="">
+            <div class="hidden" id="navbarCollapse" style="">
                 <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#contact-us">Contact Us</a>
@@ -44,7 +44,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="main-banner-content">
-                        <h1>Learn smart, assess better! AI to your help.<span>Launching soon.</span></h1>
+                        <h1>Learn smart, assess better! AI to your help.&nbsp;<span>Launching soon.</span></h1>
                         <p>"Pursuit on engineering excellence, driven by passion, heavy focus on user experience"</p>
                         <a href="javascript:;" class="hidden">Learn More</a>
                     </div>
@@ -53,7 +53,7 @@
         </div>
     </section>
     <!-- banner section starts -->
-    <section class="about-section">
+    <section class="about-section hidden">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -72,7 +72,7 @@
                 </div>
             </div>
 
-            <div class="row part2 hidden">
+            <div class="row part2">
                 <div class="col-md-6">
                     <div class="about-img">
                         <img src="assets/img/about-img-min.jpg" alt="">
